less, js and css files marked as deprecated.

--- a/gui/admin-gui/src/main/webapp/css/css-fixed-nonIE.css
+++ b/gui/admin-gui/src/main/webapp/css/css-fixed-nonIE.css
@@ -14,6 +14,10 @@
  * limitations under the License.
  */
 
+/**
+ * DEPRECATED [lazyman]
+ */
+
 /** A WebReflection Solution */
 .position-fixed-top {
     position:fixed !important;
