--- a/gui/admin-gui/src/main/webapp/css/tipsy.css
+++ b/gui/admin-gui/src/main/webapp/css/tipsy.css
@@ -1,3 +1,7 @@
+/**
+ * DEPRECATED [lazyman]
+ */
+
 .tipsy { font-size: 12px; position: absolute; padding: 5px; z-index: 100000; font-family: Arial,Helvetica,sans-serif; }
   .tipsy-inner { background-color: #333; color: #FFF; max-width: 400px; padding: 8px 8px 8px 8px; text-align: center; }
 
