--- a/gui/admin-gui/src/main/webapp/css/css-fixed-IE.css
+++ b/gui/admin-gui/src/main/webapp/css/css-fixed-IE.css
@@ -14,6 +14,10 @@
  * limitations under the License.
  */
 
+/**
+ * DEPRECATED [lazyman]
+ */
+
 /** A WebReflection Solution */
 div.objectForm table.tableForm input[type='text'],
 div.objectForm table.tableForm input[type='password'],
