--- a/gui/admin-gui/src/main/webapp/css/reset.css
+++ b/gui/admin-gui/src/main/webapp/css/reset.css
@@ -14,6 +14,10 @@
  * limitations under the License.
  */
 
+/**
+ * DEPRECATED [lazyman]
+ */
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
