--- a/gui/admin-gui/src/main/webapp/less/evolveum-obsolete.less
+++ b/gui/admin-gui/src/main/webapp/less/evolveum-obsolete.less
@@ -1,4 +1,8 @@
 //
+// DEPRECATED [lazyman]
+//
+
+//
 // Copyright (c) 2010-2013 Evolveum
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
