prism form styles update, something will probably break :)

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/PasswordPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/PasswordPanel.html
@@ -18,6 +18,6 @@
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
     <input class="form-control input-sm" wicket:id="password1" type="password"/>
-    <input class="form-control input-sm" wicket:id="password2" type="password"/>
+    <input class="form-control input-sm" wicket:id="password2" type="password" style="margin-top: 5px;"/>
 </wicket:panel>
 </html>
