--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismObjectPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismObjectPanel.html
@@ -17,8 +17,7 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <div class="objectForm" align="center">
-
+    <div>
         <div class="tableForm" >
             <div class="tableFormHead">
                 <div class="objectFormHeader" wicket:id="headerPanel">
@@ -34,7 +33,7 @@
                     <div class="objectFormHeaderOperationButtons" wicket:id="operationButtons" />
                 </div>
             </div>
-            <div class="tableFormBody" wicket:id="body">
+            <div wicket:id="body">
                 <div wicket:id="containers">
                     <div wicket:id="container"/>
                 </div>
