--- a/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
@@ -3,6 +3,7 @@
 @import "../bootstrap/mixins.less";
 
 @import "top-menu.less";
+@import "prism-container.less";
 @import "wizard.less";
 @import "page-login.less";
 @import "page-user-details.less";
