--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismPropertyPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismPropertyPanel.html
@@ -17,19 +17,17 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <div class="objectFormLabel">
-        <div class="objectFormLabelName">
-            <span wicket:id="label"/>
-            <span wicket:id="required" style="color: #f00; font-weight: bold;"
-                    wicket:message="title:prismPropertyPanel.required">*</span>
-            <span wicket:id="hasOutbound" style="color: #00f; font-weight: bold;"
-                  wicket:message="title:prismPropertyPanel.hasOutbound">*</span>
-            <span wicket:id="hasPendingModification" style="color: #f0f; font-weight: bold;"
-                  wicket:message="title:prismPropertyPanel.hasPendingModification">*</span>
-        </div>
+    <div class="col-xs-4">
+        <span wicket:id="label"/>
+        <span wicket:id="required" style="color: #f00; font-weight: bold;"
+                wicket:message="title:prismPropertyPanel.required">*</span>
+        <span wicket:id="hasOutbound" style="color: #00f; font-weight: bold;"
+              wicket:message="title:prismPropertyPanel.hasOutbound">*</span>
+        <span wicket:id="hasPendingModification" style="color: #f0f; font-weight: bold;"
+              wicket:message="title:prismPropertyPanel.hasPendingModification">*</span>
     </div>
-    <div class="objectFormValues" wicket:id="values">
-        <div wicket:id="value"/>
+    <div class="col-xs-8" wicket:id="values">
+        <div class="row" wicket:id="value"/>
     </div>
 </wicket:panel>
 </html>
