configuration panel in resource wizard, not finished yet.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/ConfigurationStep.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/ConfigurationStep.html
@@ -19,6 +19,6 @@
 <wicket:panel>
     <div wicket:id="configuration" />
 
-    <a wicket:id="testConnection" />
+    <a class="btn btn-info" style="margin: 10px 0 20px;" wicket:id="testConnection" />
 </wicket:panel>
 </html>
