--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/NameStep.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/NameStep.html
@@ -25,10 +25,10 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="col-md-3 control-label" for="description"><wicket:message key="NameStep.description"/></label>
+        <label class="col-md-3 control-label"><wicket:message key="NameStep.description"/></label>
 
         <div class="col-md-3">
-            <textarea rows="2" class="form-control input-sm" id="description" wicket:message="placeholder:NameStep.description"></textarea>
+            <textarea rows="2" class="form-control input-sm" wicket:id="description" wicket:message="placeholder:NameStep.description"></textarea>
         </div>
     </div>
     <div class="form-group">
