h3 header for prism form.

--- a/gui/admin-gui/src/main/webapp/less/midpoint/prism-container.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/prism-container.less
@@ -14,6 +14,28 @@
  * limitations under the License.
  */
 
+div.tableForm div.header {
+  border-bottom: 1px solid @table-border-color;
+  margin: 0;
+
+  h3 {
+    margin-bottom: 5px;
+  }
+
+  div.cog {
+    margin-top: 18px; padding-right: 5px;
+  }
+}
+
+/* inline menu in div */
+.cog ul.cog {
+
+  > li > a {
+    padding: 4px 8px 5px;
+  }
+}
+
+/* body */
 div.attributeComponent > div {
 
   //improve rendering in components and remove this helper class
