h3 header fix and check table header for accounts/assignments used on user details.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismObjectPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismObjectPanel.html
@@ -19,7 +19,7 @@
 <wicket:panel>
     <div>
         <div class="tableForm" >
-            <div class="tableFormHead">
+            <div class="tableFormHead" style="display: none;">
                 <div class="objectFormHeader" wicket:id="headerPanel">
                     <div class="objectFormHeaderOptionButtons" wicket:id="optionButtons" />
                     <img class="objectFormHeaderIcon" wicket:id="headerImg"/>
@@ -38,9 +38,6 @@
                 <div wicket:id="containers">
                     <div wicket:id="container"/>
                 </div>
-            </div>
-            <div class="tableFormFoot">
-                <div class="objectFormFooter">&nbsp;<div class="statusBarContent" wicket:id="footer"/></div>
             </div>
         </div>
     </div>
