--- a/gui/admin-gui/src/main/webapp/less/midpoint/prism-container.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/prism-container.less
@@ -25,6 +25,13 @@ div.tableForm div.header {
   div.cog {
     margin-top: 18px; padding-right: 5px;
   }
+
+  span.name {
+    color: @brand-primary;
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-right: 5px;
+  }
 }
 
 /* inline menu in div */
