preparded fix for css problems in prism form.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismContainerPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismContainerPanel.html
@@ -17,7 +17,7 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <div wicket:id="header">
+    <div class="visible" wicket:id="header">
         <div class="container-name" wicket:id="label"/>
     </div>
     <div wicket:id="properties">
