--- a/gui/admin-gui/src/main/webapp/less/midpoint/prism-container.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/prism-container.less
@@ -42,25 +42,29 @@ div.tableForm div.header {
   }
 }
 
+//jquery script like this fixes nth-child(2n+1) problem
+//var objects = $('#<prism-form-id>').find('div.attributeComponent > div.visible');
+//for (var i=0; i < objects.length; i++){
+//if (i%2 == 0) {
+//objects[i].style.backgroundColor='#f9f9f9';
+//}
+//  }
+div.tableForm > div > div > div > div.visible:nth-child(2n+1) {
+  background-color: @table-bg-accent;
+}
+
 /* body */
 div.attributeComponent > div {
 
-  //improve rendering in components and remove this helper class
   &.visible {
     border-top: 1px solid @table-border-color;
   }
-
-  //improve rendering in components and use this helper class
-//  &:nth-child(2n+1) {
-//    background-color: @table-bg-accent;
-//  }
 
   & > div {
     padding: @padding-small-vertical;
   }
 
   & div.container-name {
-    border-top: 1px solid @table-border-color;
     color: @brand-primary;
     font-size: 1.3em;
     font-weight: bold;
