--- a/gui/gui-components/src/main/java/com/evolveum/midpoint/web/component/async/AsyncUpdatePanel.html
+++ b/gui/gui-components/src/main/java/com/evolveum/midpoint/web/component/async/AsyncUpdatePanel.html
@@ -17,7 +17,7 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <img wicket:id="loading"/>
+    <img wicket:id="loading" height="16" />
     <div wicket:id="body" />
 </wicket:panel>
 </html>
