--- a/gui/admin-gui/src/main/webapp/less/midpoint/page-user-details.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/page-user-details.less
@@ -1,5 +1,20 @@
 @import "variables.less";
 
+div.row.assignable-header {
+  border-bottom: 1px solid @table-border-color;
+  margin: 0px;
+
+  h3 {
+    margin-bottom: 5px;
+  }
+
+  & > div.cog {
+    margin-top: 18px;
+    padding-right: 5px;
+  }
+}
+
+
 ul.nav.nav-pills.cog {
   margin: 0px;
 }
