ajax-loader reverting hi-res images.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/AsyncDashboardPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/AsyncDashboardPanel.html
@@ -23,7 +23,7 @@
         </div>
         <div class="panel-body" wicket:id="dashboardContent">
             <div wicket:id="preloaderContainer" style="margin: 10px 0; text-align: center;">
-                <img wicket:id="preloader" height="16"/>
+                <img wicket:id="preloader"/>
                 <wicket:message key="AsyncDashboardPanel.loading"/>
             </div>
             <div wicket:id="content"/>
