more css styles for user details.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/CheckTableHeader.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/CheckTableHeader.html
@@ -17,9 +17,9 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <div class="col-xs-10" style="padding: 5px;">
-        <input type="checkbox" wicket:id="check" style="display: inline-block;"/>
-        <i class="silk-user" wicket:id="icon" style="margin: 0 5px;"></i>
+    <div class="col-xs-10">
+        <input type="checkbox" wicket:id="check"/>
+        <i class="silk-user" wicket:id="icon"></i>
         <span class="name" wicket:id="name"/>
         <span class="description" wicket:id="description"/>
     </div>
