--- a/gui/admin-gui/src/main/webapp/less/midpoint/prism-container.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/prism-container.less
@@ -15,22 +15,51 @@
  */
 
 div.tableForm div.header {
-  border-bottom: 1px solid @table-border-color;
   margin: 0;
 
-  h3 {
-    margin-bottom: 5px;
+  &.h3-header {
+    border-bottom: 1px solid @table-border-color;
+
+    h3 {
+      margin-bottom: 5px;
+    }
+
+    div.cog {
+      margin-top: 18px;
+      padding-right: 5px;
+    }
   }
 
-  div.cog {
-    margin-top: 18px; padding-right: 5px;
-  }
+  &.check-table-header {
+    border-top: 1px solid @table-border-color;
 
-  span.name {
-    color: @brand-primary;
-    font-size: 1.2em;
-    font-weight: bold;
-    margin-right: 5px;
+    & > div.col-xs-10 {
+      padding: 5px;
+
+      input {
+        display: inline-block;
+      }
+
+      i {
+        margin: 0 5px;
+      }
+
+      span.name {
+        color: @brand-primary;
+        font-size: 1.2em;
+        font-weight: bold;
+        margin-right: 5px;
+      }
+
+      span.description {
+
+      }
+    }
+
+    div.cog {
+      margin-top: 3px;
+      padding-right: 5px;
+    }
   }
 }
 
