--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/assignment/AssignmentEditorPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/assignment/AssignmentEditorPanel.html
@@ -17,28 +17,42 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-        <div wicket:id="headerPanel" class="assignmentHeader">
-            <input type="checkbox" wicket:id="selected" style="margin-right: 10px;"/>
-            <img wicket:id="typeImage" style="margin-right: 10px;"/>
-            <a wicket:id="name" style="margin-right: 10px;"><span wicket:id="nameLabel"/></a>
-            <span wicket:id="activation"/>
+        <div class="row header" wicket:id="headerRow">
+            <div class="col-xs-10">
+                <input type="checkbox" wicket:id="selected"/>
+                <i wicket:id="typeImage"></i>
+                <a wicket:id="name"><span wicket:id="nameLabel"/></a>
+                <span wicket:id="activation"/>
+            </div>
+            <div class="col-xs-2 cog"/>
         </div>
-        <div wicket:id="main">
-            <div wicket:id="body" class="assignmentBody">
-                <!--body-->
-                <div class="assignmentDescription">
-                    <span style="width: 70px; display: inline-block; vertical-align: top; margin-top: 10px;">
-                        <wicket:message key="AssignmentEditorPanel.description"/>
-                    </span>
-                    <textarea cols="34" rows="2" wicket:id="description"/>
+        <div class="row" wicket:id="main">
+            <div wicket:id="body">
+                <div class="row">
+                    <div class="col-xs-4">
+                        <span><wicket:message key="AssignmentEditorPanel.description"/></span>
+                    </div>
+                    <div class="col-xs-8">
+                        <div class="row">
+                            <div class="col-xs-9">
+                                <textarea class="form-control input-sm" rows="2" wicket:id="description"></textarea>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="assignmentDescription">
-                    <span style="width: 70px; display: inline-block;">
-                        <wicket:message key="AssignmentEditorPanel.relation"/>
-                    </span>
-                    <input type="text" wicket:id="relation"/>
+                <div class="row">
+                    <div class="col-xs-4">
+                        <span><wicket:message key="AssignmentEditorPanel.relation"/></span>
+                    </div>
+                    <div class="col-xs-8">
+                        <div class="row">
+                            <div class="col-xs-9">
+                                <input type="text" class="form-control input-sm" wicket:id="relation"/>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                
+
                 <div class="assignmentBlock" wicket:id="activationBlock">
                 	<h4>
 	                    <wicket:message key="ActivationType.title"/>
