--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/SystemInfoPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/SystemInfoPanel.html
@@ -17,8 +17,8 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <table>
-        <tr>
+    <table class="table table-widget table-system-info">
+        <tr style="text-align: center;">
             <td>
                 <div wicket:id="activeUsers" />
             </td>
