--- a/gui/admin-gui/src/main/webapp/less/midpoint/page-dashboard.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/page-dashboard.less
@@ -2,6 +2,10 @@ table.table-widget {
   margin-bottom: 0px;
 }
 
+table.table-system-info td {
+  border-top: 0px !important;
+}
+
 /*
  * charts
  */
@@ -13,6 +17,9 @@ div.chart-panel {
 
   div.chart {
 
+    small {
+      font-size: 0.7em;
+    }
   }
 
   div.chart-label {
