--- a/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
@@ -10,6 +10,21 @@
 @import "page-dashboard.less";
 @import "page-debugs.less";
 
+div.wicket-debug-buttons {
+  border: 1px solid #000000;
+  bottom: 50px;
+  display: block;
+  padding: 5px;
+  position: fixed;
+  right: 10px;
+  z-index: 1000000;
+
+  a {
+    display: block;
+    padding: 3px;
+  }
+}
+
 span.button-group {
   display: inline-block;
   margin-right: 30px;
