--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/ConfigurationStep.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/ConfigurationStep.html
@@ -17,7 +17,15 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <div wicket:id="configuration" />
+    <div class="row">
+        <div class="col-xs-6">
+            <div wicket:id="configuration" />
+        </div>
+        <div class="col-xs-6">
+            todo
+        </div>
+    </div>
+
 
     <a class="btn btn-info" style="margin: 10px 0 20px;" wicket:id="testConnection" />
 </wicket:panel>
