top menu header logo added to midpoint-variables. minor css fixes.

--- a/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
@@ -2,6 +2,9 @@
 @import "../custom/variables.less";
 @import "../bootstrap/mixins.less";
 
+@import "midpoint-variables.less";
+@import "../custom/midpoint-variables.less";
+
 @import "top-menu.less";
 @import "prism-container.less";
 @import "wizard.less";
