--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/menu/top2/TopMenuBar.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/menu/top2/TopMenuBar.html
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="#" class="navbar-brand">
-                    <img src="./img/midpoint-logo-black.png" class="logo"/>
+                    <span class="logo">&nbsp;</span>
                 </a>
             </div>
             <div class="navbar-collapse collapse">
