--- a/gui/admin-gui/src/main/webapp/less/midpoint/top-menu.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/top-menu.less
@@ -8,11 +8,14 @@ div.navbar {
 
     padding: 5px 0;
 
-    img.logo {
-      border: 0px;
+    span.logo {
       height: 28px;
+      width: 100px;
       margin-right: 40px;
       margin-left: 10px;
+      background: @logo-img-url no-repeat 0 0;
+      background-size: 100px 28px;
+      display: inline-block;
     }
   }
 
