SystemConfigPage implementation - ChoosePanel and ModalWindow. Not finished yet.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/SystemConfigPanel.html
@@ -27,27 +27,15 @@
                 <label class="col-lg-4 control-label">
                     <wicket:message key="SystemConfigPanel.title.passwordPolicy"/>
                 </label>
+                <div wicket:id="passwordPolicyChooser" />
 
-                <div class="col-lg-4">
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox" name="optionsRadios">
-                        </label>
-                    </div>
-                </div>
             </div>
             <div class="form-group">
                 <label class="col-lg-4 control-label">
                     <wicket:message key="SystemConfigPanel.title.userTemplate"/>
                 </label>
+                <div wicket:id="userTemplateChooser" />
 
-                <div class="col-lg-4">
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox" name="optionsRadios">
-                        </label>
-                    </div>
-                </div>
             </div>
 
             <h3 style="margin-left: 20px;">
