fix for MID-1652. Multi-value elements in account assignment should be aligned correctly now. (cherry picked from commit 9da2b31)

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/assignment/ACAttributePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/assignment/ACAttributePanel.html
@@ -24,7 +24,7 @@
         <span wicket:id="hasOutbound" style="color: #00f; font-weight: bold;"
               wicket:message="title:ACAttributePanel.hasOutbound">*</span>
     </div>
-    <div style="display: inline-block;">
+    <div style="display: inline-table;">
 	    <div wicket:id="values">
 	        <div wicket:id="value" class="assignmentAttrValue" style="display: inline-block;" />
 	    </div>
