editor for org. units, work in progress

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/form/TextFormGroup.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/form/TextFormGroup.html
@@ -21,6 +21,7 @@
 
     <div wicket:id="textWrapper">
         <input type="text" class="form-control input-sm" wicket:id="text">
+        <span class="text-danger" wicket:id="feedback"/>
     </div>
 </wicket:panel>
 </html>
