ChooseTypePanel and dialog. Work in progress.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/ChooseTypeDialog.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/ChooseTypeDialog.html
@@ -15,15 +15,11 @@
   -->
 
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
-    <div>
-        <form wicket:id="mainForm" style="margin: 5px;">
-            <div>
-                <!-- table goes here -->
-            </div>
+    <div wicket:id="content">
+        <div wicket:id="table" />
 
-            <p align="right">
-                <a wicket:id="cancelButton"></a>
-            </p>
-        </form>
+        <p align="right">
+            <a wicket:id="cancelButton"></a>
+        </p>
     </div>
 </wicket:panel>
