--- a/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
@@ -124,3 +124,12 @@ div.form-group > div > span.text-danger {
     padding: 0 0 0 @padding-base-horizontal;
   }
 }
+
+/*
+ * fix for yui calendar
+ */
+span.yui-skin-sam {
+  position: absolute;
+  right: 24px;
+  top: 3px;
+}
