updated css for old org. structure page

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/orgStruct/OrgStructPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/orgStruct/OrgStructPanel.html
@@ -17,6 +17,7 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <div wicket:id="tabletree" class="tree treeTable" />
+    <div wicket:id="tabletree" class="tree treeTable table table-condensed table-striped"
+            style="margin-top: 20px; border-top: 1px solid #F2F2F2;"/>
 </wicket:panel>
 </html>
