tree table experiments.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTable.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTable.html
@@ -16,16 +16,34 @@
   ~ limitations under the License.
   -->
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
-    <table class="table table-striped table-condensed" style="margin-top: 10px;">
-        <thead>
-            <th class="cog"><input type="checkbox"/></th>
-            <th></th>
-            <th>Display name</th>
-            <th>Relation</th>
-            <th>Description</th>
-        </thead>
-        <tbody>
+    <!--<table class="table table-striped table-condensed" style="margin-top: 10px;">-->
+        <!--<thead>-->
+            <!--<th class="cog"><input type="checkbox"/></th>-->
+            <!--<th></th>-->
+            <!--<th>Display name</th>-->
+            <!--<th>Relation</th>-->
+            <!--<th>Description</th>-->
+        <!--</thead>-->
+        <!--<tbody>-->
+            <!--<tr>-->
+                <!--<td><input type="checkbox"/></td>-->
+                <!--<td>tree</td>-->
+                <!--<td>Foo Bar</td>-->
+                <!--<td>Manager</td>-->
+                <!--<td>Lorem ipsum</td>-->
+            <!--</tr>-->
             <!--<tr wicket:id="children"/>-->
-        </tbody>
-    </table>
+        <!--</tbody>-->
+    <!--</table>-->
+
+    <!--<table>-->
+        <!--<thead>-->
+
+        <!--</thead>-->
+        <!--<tbody>-->
+            <!--<tr>-->
+
+            <!--</tr>-->
+        <!--</tbody>-->
+    <!--</table>-->
 </wicket:panel>
