--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTableLine.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTableLine.html
@@ -16,12 +16,20 @@
   ~ limitations under the License.
   -->
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
-    <tr>
-        <td><input type="checkbox"/></td>
-        <td>tree</td>
-        <td>display name</td>
-        <td>relation</td>
-        <td>description</td>
-    </tr>
-    <!--<tr wicket:id="children"/>-->
+    <!--<tbody wicket:id="row">-->
+        <!--<tr>-->
+            <!--<td><input type="checkbox"/></td>-->
+            <!--<td>tree</td>-->
+            <!--<td>display name</td>-->
+            <!--<td>relation</td>-->
+            <!--<td>description</td>-->
+        <!--</tr>-->
+        <!--<tr wicket:id="children"/>-->
+        <!--<tr wicket:id="pagingRow">-->
+            <!--<td></td>-->
+            <!--<td colspan="4">-->
+                <!--<div wicket:id="paging"/>-->
+            <!--</td>-->
+        <!--</tr>-->
+    <!--</tbody>-->
 </wicket:panel>
