SystemConfigPage - Layout changes.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/ChooseTypePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/ChooseTypePanel.html
@@ -25,7 +25,7 @@
         <span wicket:id="name">[ChooserName]</span>
 
         <a class="btn btn-primary btn-xs">
-            <i wicket:id="choose" class="glyphicon glyphicon-pencil" onmouseover=""></i>
+            <i wicket:id="choose" class="glyphicon glyphicon-pencil" ></i>
         </a>
 
         <a class="btn btn-danger btn-xs">
