org. tree now selectable, stylesheets will be created later.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.html
@@ -16,7 +16,7 @@
   ~ limitations under the License.
   -->
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
-    <div class="row">
+    <div class="row" style="margin-top: 15px;">
         <div class="col-md-4">
             <div wicket:id="tree"/>
         </div>
