add/remove value button improved styles, also visibility. fix for tri-state combo in prism form.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/TriStateComboPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/TriStateComboPanel.html
@@ -17,6 +17,6 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <select wicket:id="combo"/>
+    <select class="form-control input-sm" wicket:id="combo"/>
 </wicket:panel>
 </html>
