--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismValuePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismValuePanel.html
@@ -22,8 +22,8 @@
 
         <div class="col-xs-3">
             <span class="btn-group">
-                <a class="btn btn-default btn-sm" wicket:id="addButton"><i class="silk-add"/></a>
-                <a class="btn btn-default btn-sm" wicket:id="removeButton"><i class="silk-delete"/></a>
+                <a class="btn btn-danger btn-sm" wicket:id="removeButton"><i class="glyphicon glyphicon-minus"/></a>
+                <a class="btn btn-success btn-sm" wicket:id="addButton"><i class="glyphicon glyphicon-plus"/></a>
             </span>
         </div>
     </div>
