--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.html
@@ -21,7 +21,9 @@
             <div wicket:id="tree"/>
         </div>
         <div class="col-md-8">
-            <div wicket:id="table"/>
+            <form wicket:id="form">
+                <div wicket:id="table"/>
+            </form>
         </div>
     </div>
 </wicket:panel>
