table inline menu for org. tree hierarchy

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/menu/cog/InlineMenu.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/menu/cog/InlineMenu.html
@@ -17,6 +17,7 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
+    <wicket:enclosure child="li">
     <ul class="nav nav-pills cog pull-right">
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown">
@@ -28,5 +29,6 @@
             </ul>
         </li>
     </ul>
+    </wicket:enclosure>
 </wicket:panel>
 </html>
