--- a/gui/admin-gui/src/main/webapp/less/midpoint/bootstrap-override.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/bootstrap-override.less
@@ -3,8 +3,12 @@
 @import "../bootstrap/mixins.less";
 
 .page-header {
-  margin: 50px 0 10px;
+  margin: 0 0 10px;
   padding-bottom: 0;
+
+  h1 {
+    margin-top: 10px;
+  }
 }
 
 //dropdown-menu disabled span fix
@@ -30,49 +34,3 @@
     .reset-filter();
     cursor: not-allowed;
 }
-
-//select,
-//textarea,
-//input[type="text"],
-//input[type="password"],
-//input[type="datetime"],
-//input[type="datetime-local"],
-//input[type="date"],
-//input[type="month"],
-//input[type="time"],
-//input[type="week"],
-//input[type="number"],
-//input[type="email"],
-//input[type="url"],
-//input[type="search"],
-//input[type="tel"],
-//input[type="color"],
-//.uneditable-input {
-//
-//  margin-bottom: 0;
-//  height: 30px;
-//  padding: 4px 8px;
-//}
-//
-//.form-control {
-//  height: 30px;
-//  padding: 4px 8px;
-//}
-//
-//table th, table td {
-//  padding: 6px;
-//}
-//
-//.table thead > tr > th,
-//.table tbody > tr > th,
-//.table tfoot > tr > th,
-//.table thead > tr > td,
-//.table tbody > tr > td,
-//.table tfoot > tr > td {
-//  //  line-height: 18px;
-//  padding: 6px;
-//
-//  a.btn, button.btn {
-//    padding: 4px 8px;
-//  }
-//}
