--- a/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
@@ -6,6 +6,7 @@
 @import "top-menu.less";
 @import "prism-container.less";
 @import "wizard.less";
+@import "tree.less";
 @import "page-login.less";
 @import "page-user-details.less";
 @import "page-dashboard.less";
@@ -134,7 +135,7 @@ span.yui-skin-sam {
 div.org-tree-header {
   padding: 8px @padding-small-vertical @padding-small-vertical;
   font-weight: bold;
-  border-bottom: 2px solid @table-border-color;
+  border-bottom: 1px solid @table-border-color;
 }
 
 div.org-tree-container {
