delete operation on org. tree page implemented.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.html
@@ -16,6 +16,8 @@
   ~ limitations under the License.
   -->
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
+    <div wicket:id="confirmDeletePopup" />
+
     <div class="row" style="margin-top: 15px;">
         <div class="col-md-4">
             <div id="treeHeader" class="org-tree-header">
